--- a/src/pages/LindenHouse/Location/style.css
+++ b/src/pages/LindenHouse/Location/style.css
@@ -28,6 +28,9 @@
     line-height: 22px;
     margin-bottom: 3px;
 }
+.location-section .MuiPaper-root:last-child {
+  border-bottom: 1px solid #C9C9C9;
+}
 
 /* location direction */
 .location-section .details li {
@@ -114,6 +117,19 @@
     margin-top: 70px;
   }
 }
+@media (max-width: 899px) {
+  .location-container h2{
+    margin-bottom: 0px!important;
+  }
+  .linden-house .MuiAccordionSummary-content,
+  .linden-house .MuiTypography-root:last-child {
+    font-size: 30px!important;
+    line-height: 35px!important;
+  }
+  .linden-house .accordion-container {
+    margin-top: 50px;
+  }
+}
 @media (max-width: 767px) {
   .location {
     padding-left: 0vw!important;
@@ -123,4 +139,42 @@
     font-size: 18px;
     line-height: 25px;
   }
+}
+
+@media (max-width: 599px) { 
+.location-container.global-padding {
+  padding-top: 80px!important;
+}
+.location-section .details {
+  margin-top: 30px;
+  display: grid;
+  /* column-gap: 50px; */
+  grid-template-columns: auto auto;
+}
+.location-section .details .detail-wrapper {
+  width: 50%;
+}
+.location-section .details .detail-wrapper:nth-child(n) {
+  width: 220px;
+}
+.location-section .details .detail-wrapper h3{
+  font-size: 42px;
+  line-height: 56px;
+}
+.location-section .location {
+  font-size: 18px;
+  line-height: 26px;
+}
+.linden-house .accordion-container {
+  margin-top: 25px;
+}
+.swiper-carousel-project .mySwiper {
+  margin-top: 130px;
+}
+}
+@media (max-width: 499px) { 
+  .location-section .details .detail-wrapper:nth-child(n) {
+    width: 190px;
+  }
+
 }
