--- a/src/pages/LindenHouse/Banner/style.css
+++ b/src/pages/LindenHouse/Banner/style.css
@@ -1,7 +1,6 @@
 /* bnr */
 .banner {
   z-index: 1;
-  background-color: #FFFFFF;
 }
 .bg-container {
   position: relative;
@@ -84,6 +83,9 @@
   justify-content: center;
   align-items: center;
 }
+.btn-project-bnr.line{
+  display: none;
+}
 /*
 |----------------------------------------------------------------
 | Query media
@@ -94,4 +96,18 @@
     border: 0.5px solid #FFFFFF;
   }
 
+}
+@media (max-width: 767px) {
+  .btn-project-bnr {
+    display: none;
+  }
+.btn-project-bnr.line{
+  display: block;
+  bottom: 95px;
+      position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 0%);
+    border: none;
+}
 }
